--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "dependencies": {
     "form-data": "^2.3.2",
     "node-fetch": "^2.2.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
