--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fetch listings from cargurus.com for a particular make/model",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage",
+    "test-watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -27,5 +28,9 @@
   },
   "devDependencies": {
     "jest": "^23.6.0"
-  }
+  },
+  "collectCoverageFrom": [
+    "**/*.{js}",
+    "!**/node_modules/**"
+  ]
 }
