--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "test-watch": "jest --watch"
+    "test-watch": "jest --watch",
+    "test-ci": "jest && codecov"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,12 @@
     "node-fetch": "^2.2.0"
   },
   "devDependencies": {
+    "codecov": "^3.1.0",
     "jest": "^23.6.0"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   },
   "collectCoverageFrom": [
     "**/*.{js}",
