--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --coverage",
     "test-watch": "jest --watch",
-    "test-ci": "jest && codecov"
+    "test-ci": "npm run test && codecov"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,15 @@
   },
   "jest": {
     "coverageDirectory": "./coverage/",
-    "collectCoverage": true
+    "collectCoverage": true,
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    }
   },
   "collectCoverageFrom": [
     "**/*.{js}",
